// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI flags array values do not support csv when appropriate 1`] = `
Object {
  "$0": "__REPLACED__",
  "_": Array [
    "http://www.example.com",
  ],
  "blocked-url-patterns": Array [
    ".*x,y\\\\.png",
  ],
  "blockedUrlPatterns": Array [
    ".*x,y\\\\.png",
  ],
  "channel": "cli",
  "chrome-flags": Array [
    "--window-size 800,600",
    "--enabled-features=NetworkService,VirtualTime",
  ],
  "chrome-ignore-default-flags": false,
  "chromeFlags": Array [
    "--window-size 800,600",
    "--enabled-features=NetworkService,VirtualTime",
  ],
  "chromeIgnoreDefaultFlags": false,
  "hostname": "127.0.0.1",
  "legacy-navigation": false,
  "legacyNavigation": false,
  "list-all-audits": false,
  "list-locales": false,
  "list-trace-categories": false,
  "listAllAudits": false,
  "listLocales": false,
  "listTraceCategories": false,
  "output": Array [
    "html",
  ],
  "port": 0,
  "print-config": false,
  "printConfig": false,
  "quiet": false,
  "save-assets": false,
  "saveAssets": false,
  "verbose": false,
  "view": false,
}
`;

exports[`CLI flags array values support csv when appropriate 1`] = `
Object {
  "$0": "__REPLACED__",
  "_": Array [
    "http://www.example.com",
  ],
  "channel": "cli",
  "chrome-flags": "",
  "chrome-ignore-default-flags": false,
  "chromeFlags": "",
  "chromeIgnoreDefaultFlags": false,
  "hostname": "127.0.0.1",
  "legacy-navigation": false,
  "legacyNavigation": false,
  "list-all-audits": false,
  "list-locales": false,
  "list-trace-categories": false,
  "listAllAudits": false,
  "listLocales": false,
  "listTraceCategories": false,
  "only-categories": Array [
    "performance",
    "seo",
  ],
  "onlyCategories": Array [
    "performance",
    "seo",
  ],
  "output": Array [
    "html",
  ],
  "port": 0,
  "print-config": false,
  "printConfig": false,
  "quiet": false,
  "save-assets": false,
  "saveAssets": false,
  "skip-audits": Array [
    "unused-javascript",
    "redirects",
    "bootup-time",
  ],
  "skipAudits": Array [
    "unused-javascript",
    "redirects",
    "bootup-time",
  ],
  "verbose": false,
  "view": false,
}
`;

exports[`CLI flags extraHeaders should convert extra headers to object 1`] = `
Object {
  "$0": "__REPLACED__",
  "_": Array [
    "http://www.example.com",
  ],
  "channel": "cli",
  "chrome-flags": "",
  "chrome-ignore-default-flags": false,
  "chromeFlags": "",
  "chromeIgnoreDefaultFlags": false,
  "extra-headers": Object {
    "foo": "bar",
  },
  "extraHeaders": Object {
    "foo": "bar",
  },
  "hostname": "127.0.0.1",
  "legacy-navigation": false,
  "legacyNavigation": false,
  "list-all-audits": false,
  "list-locales": false,
  "list-trace-categories": false,
  "listAllAudits": false,
  "listLocales": false,
  "listTraceCategories": false,
  "output": Array [
    "html",
  ],
  "port": 0,
  "print-config": false,
  "printConfig": false,
  "quiet": false,
  "save-assets": false,
  "saveAssets": false,
  "verbose": false,
  "view": false,
}
`;

exports[`CLI flags extraHeaders should read extra headers from file 1`] = `
Object {
  "$0": "__REPLACED__",
  "_": Array [
    "http://www.example.com",
  ],
  "channel": "cli",
  "chrome-flags": "",
  "chrome-ignore-default-flags": false,
  "chromeFlags": "",
  "chromeIgnoreDefaultFlags": false,
  "extra-headers": Object {
    "Cookie": "monster=blue",
    "x-men": "wolverine",
  },
  "extraHeaders": Object {
    "Cookie": "monster=blue",
    "x-men": "wolverine",
  },
  "hostname": "127.0.0.1",
  "legacy-navigation": false,
  "legacyNavigation": false,
  "list-all-audits": false,
  "list-locales": false,
  "list-trace-categories": false,
  "listAllAudits": false,
  "listLocales": false,
  "listTraceCategories": false,
  "output": Array [
    "html",
  ],
  "port": 0,
  "print-config": false,
  "printConfig": false,
  "quiet": false,
  "save-assets": false,
  "saveAssets": false,
  "verbose": false,
  "view": false,
}
`;

exports[`CLI flags screenEmulation deviceScaleFactor parses a non-integer numeric value 1`] = `
Object {
  "$0": "__REPLACED__",
  "_": Array [
    "http://www.example.com",
  ],
  "channel": "cli",
  "chrome-flags": "",
  "chrome-ignore-default-flags": false,
  "chromeFlags": "",
  "chromeIgnoreDefaultFlags": false,
  "hostname": "127.0.0.1",
  "legacy-navigation": false,
  "legacyNavigation": false,
  "list-all-audits": false,
  "list-locales": false,
  "list-trace-categories": false,
  "listAllAudits": false,
  "listLocales": false,
  "listTraceCategories": false,
  "output": Array [
    "html",
  ],
  "port": 0,
  "print-config": false,
  "printConfig": false,
  "quiet": false,
  "save-assets": false,
  "saveAssets": false,
  "screen-emulation": Object {
    "deviceScaleFactor": 1.325,
    "disabled": undefined,
    "height": undefined,
    "mobile": undefined,
    "width": undefined,
  },
  "screenEmulation": Object {
    "deviceScaleFactor": 1.325,
    "disabled": undefined,
    "height": undefined,
    "mobile": undefined,
    "width": undefined,
  },
  "verbose": false,
  "view": false,
}
`;

exports[`CLI flags screenEmulation disabled parses the flag with no value as true 1`] = `
Object {
  "$0": "__REPLACED__",
  "_": Array [
    "http://www.example.com",
  ],
  "channel": "cli",
  "chrome-flags": "",
  "chrome-ignore-default-flags": false,
  "chromeFlags": "",
  "chromeIgnoreDefaultFlags": false,
  "hostname": "127.0.0.1",
  "legacy-navigation": false,
  "legacyNavigation": false,
  "list-all-audits": false,
  "list-locales": false,
  "list-trace-categories": false,
  "listAllAudits": false,
  "listLocales": false,
  "listTraceCategories": false,
  "output": Array [
    "html",
  ],
  "port": 0,
  "print-config": false,
  "printConfig": false,
  "quiet": false,
  "save-assets": false,
  "saveAssets": false,
  "screen-emulation": Object {
    "deviceScaleFactor": undefined,
    "disabled": true,
    "height": undefined,
    "mobile": undefined,
    "width": undefined,
  },
  "screenEmulation": Object {
    "deviceScaleFactor": undefined,
    "disabled": true,
    "height": undefined,
    "mobile": undefined,
    "width": undefined,
  },
  "verbose": false,
  "view": false,
}
`;

exports[`CLI flags screenEmulation mobile parses the flag with no value as true 1`] = `
Object {
  "$0": "__REPLACED__",
  "_": Array [
    "http://www.example.com",
  ],
  "channel": "cli",
  "chrome-flags": "",
  "chrome-ignore-default-flags": false,
  "chromeFlags": "",
  "chromeIgnoreDefaultFlags": false,
  "hostname": "127.0.0.1",
  "legacy-navigation": false,
  "legacyNavigation": false,
  "list-all-audits": false,
  "list-locales": false,
  "list-trace-categories": false,
  "listAllAudits": false,
  "listLocales": false,
  "listTraceCategories": false,
  "output": Array [
    "html",
  ],
  "port": 0,
  "print-config": false,
  "printConfig": false,
  "quiet": false,
  "save-assets": false,
  "saveAssets": false,
  "screen-emulation": Object {
    "deviceScaleFactor": undefined,
    "disabled": undefined,
    "height": undefined,
    "mobile": true,
    "width": undefined,
  },
  "screenEmulation": Object {
    "deviceScaleFactor": undefined,
    "disabled": undefined,
    "height": undefined,
    "mobile": true,
    "width": undefined,
  },
  "verbose": false,
  "view": false,
}
`;

exports[`CLI flags screenEmulation width parses a number value 1`] = `
Object {
  "$0": "__REPLACED__",
  "_": Array [
    "http://www.example.com",
  ],
  "channel": "cli",
  "chrome-flags": "",
  "chrome-ignore-default-flags": false,
  "chromeFlags": "",
  "chromeIgnoreDefaultFlags": false,
  "hostname": "127.0.0.1",
  "legacy-navigation": false,
  "legacyNavigation": false,
  "list-all-audits": false,
  "list-locales": false,
  "list-trace-categories": false,
  "listAllAudits": false,
  "listLocales": false,
  "listTraceCategories": false,
  "output": Array [
    "html",
  ],
  "port": 0,
  "print-config": false,
  "printConfig": false,
  "quiet": false,
  "save-assets": false,
  "saveAssets": false,
  "screen-emulation": Object {
    "deviceScaleFactor": undefined,
    "disabled": undefined,
    "height": undefined,
    "mobile": undefined,
    "width": 500,
  },
  "screenEmulation": Object {
    "deviceScaleFactor": undefined,
    "disabled": undefined,
    "height": undefined,
    "mobile": undefined,
    "width": 500,
  },
  "verbose": false,
  "view": false,
}
`;

exports[`CLI flags settings are accepted from a file path (inlined budgets) 1`] = `
Object {
  "$0": "__REPLACED__",
  "_": Array [
    "http://www.example.com",
  ],
  "budgets": Array [
    Object {
      "anything": "works",
    },
  ],
  "channel": "cli",
  "chrome-flags": "",
  "chrome-ignore-default-flags": false,
  "chromeFlags": "",
  "chromeIgnoreDefaultFlags": false,
  "cli-flags-path": "__REPLACED__/lighthouse-cli/test/fixtures/cli-flags-path-inline-budgets.json",
  "cliFlagsPath": "__REPLACED__/lighthouse-cli/test/fixtures/cli-flags-path-inline-budgets.json",
  "hostname": "127.0.0.1",
  "legacy-navigation": false,
  "legacyNavigation": false,
  "list-all-audits": false,
  "list-locales": false,
  "list-trace-categories": false,
  "listAllAudits": false,
  "listLocales": false,
  "listTraceCategories": false,
  "output": Array [
    "html",
  ],
  "port": 0,
  "print-config": false,
  "printConfig": false,
  "quiet": false,
  "save-assets": false,
  "saveAssets": false,
  "verbose": false,
  "view": false,
}
`;

exports[`CLI flags settings are accepted from a file path 1`] = `
Object {
  "$0": "__REPLACED__",
  "_": Array [
    "http://www.example.com",
  ],
  "budget-path": "path/to/my/budget-from-config.json",
  "budgetPath": "path/to/my/budget-from-config.json",
  "budgets-path": "path/to/my/budget-from-command-line.json",
  "budgetsPath": "path/to/my/budget-from-command-line.json",
  "channel": "cli",
  "chrome-flags": "--window-size 800,600",
  "chrome-ignore-default-flags": false,
  "chromeFlags": "--window-size 800,600",
  "chromeIgnoreDefaultFlags": false,
  "cli-flags-path": "__REPLACED__/lighthouse-cli/test/fixtures/cli-flags-path.json",
  "cliFlagsPath": "__REPLACED__/lighthouse-cli/test/fixtures/cli-flags-path.json",
  "extra-headers": Object {
    "X-Men": "wolverine",
  },
  "extraHeaders": Object {
    "X-Men": "wolverine",
  },
  "hostname": "127.0.0.1",
  "legacy-navigation": false,
  "legacyNavigation": false,
  "list-all-audits": false,
  "list-locales": false,
  "list-trace-categories": false,
  "listAllAudits": false,
  "listLocales": false,
  "listTraceCategories": false,
  "only-categories": Array [
    "performance",
    "seo",
  ],
  "onlyCategories": Array [
    "performance",
    "seo",
  ],
  "output": Array [
    "html",
  ],
  "port": 0,
  "print-config": false,
  "printConfig": false,
  "quiet": false,
  "save-assets": false,
  "saveAssets": false,
  "throttling": Object {
    "cpuSlowdownMultiplier": 6,
    "downloadThroughputKbps": undefined,
    "requestLatencyMs": 700,
    "rttMs": undefined,
    "throughputKbps": undefined,
    "uploadThroughputKbps": undefined,
  },
  "throttling-method": "devtools",
  "throttlingMethod": "devtools",
  "verbose": false,
  "view": false,
}
`;
